...

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.HomeActivity"
    android:id="@+id/home_activity"
    android:orientation="vertical"
    >

    <include layout="@layout/status_bar_space" />

    <RelativeLayout
...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/show_settings_icon"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/settings_icon_accessibility"
            android:onClick="showSettings"
...
