...
    <string name="btn_set_location">Set Location</string>
    <string name="onboarding_location_work_label">Work address</string>
    <string name="onboarding_location_default_address">No location selected.</string>
    <string name="onboarding_location_home_label">Home address</string>
    <string name="onboarding_no_location">Not currently set</string>

    <string name="settings_icon_accessibility">Settings Icon</string>
    <string name="all_apps_button">Button to take you to the all applications screen.</string>
    <string name="favourite_icon">Favourite icon</string>
    <string name="month_day_dummy_text">Month Day</string>
    <string name="weekday_year_dummy_text">Weekday Year</string>
    <string name="search_hint">Search apps...</string>
    <string name="edit_apps_button">Edit Context Apps</string>
    <string name="settings_schedules_label">Schedules</string>
...
