<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <TextView
        android:id="@+id/textFinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView5"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        android:text="You have completed the Onboarding, hope you make good use of Kairos"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="162dp"
        android:layout_height="160dp"
        android:layout_above="@+id/finish"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/ic_smile" />

    <Button
        android:id="@+id/finish"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:onClick="finish"
        android:text="Finish"
        android:textSize="18sp" />
</android.widget.RelativeLayout>