<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:padding="15dp"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/app_check"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false">

        <ImageView
            android:id="@+id/app_check_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:clickable="false"
            app:srcCompat="@drawable/ic_work_black" />

        <TextView
            android:id="@+id/app_check_label"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingLeft="20dp"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:layout_toEndOf="@+id/app_check_image"
            android:textColor="@android:color/black"
            android:text="Application Name"
            android:clickable="false"
            />

        <CheckBox
            android:id="@+id/app_check_box"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:clickable="false"
            />
    </RelativeLayout>
</LinearLayout>